--- a/Docker/plusFlix/backend/.env
+++ b/Docker/plusFlix/backend/.env
@@ -24,4 +24,5 @@ APP_SHARE_DIR=var/share
 # Configure how to generate URLs in non-HTTP contexts, such as CLI commands.
 # See https://symfony.com/doc/current/routing.html#generating-urls-in-commands
 DEFAULT_URI=http://localhost
+DATABASE_URL="sqlite:///%kernel.project_dir%/var/plusflix.db"
 ###< symfony/routing ###
