--- a/Docker/plusFlix/backend/config/routes.yaml
+++ b/Docker/plusFlix/backend/config/routes.yaml
@@ -8,8 +8,9 @@
 #   bin/console debug:router
 
 controllers:
-    resource: routing.controllers
+      resource: '../src/Controller/'
+      type: attribute
 
-home:
-    path: /
-    controller: App\Controller\DefaultController::index
+crud_controller:
+     resource: '../src/Controller/CrudController.php'
+     type: attribute
