--- a/Docker/plusFlix/backend/composer.json
+++ b/Docker/plusFlix/backend/composer.json
@@ -15,7 +15,9 @@
         "symfony/flex": "^2.10",
         "symfony/framework-bundle": "8.0.*",
         "symfony/runtime": "8.0.*",
-        "symfony/yaml": "8.0.*"
+        "symfony/yaml": "8.0.*",
+        "twig/twig": "^3.0",
+        "symfony/twig-bundle": "^8.0"
     },
     "config": {
         "allow-plugins": {
