Fixed chmod for Linux

--- a/Docker/plusFlix/docker/php/Dockerfile
+++ b/Docker/plusFlix/docker/php/Dockerfile
@@ -10,5 +10,8 @@ COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 RUN curl -sS https://get.symfony.com/cli/installer | bash \
     && mv /root/.symfony*/bin/symfony /usr/local/bin/symfony
 
+COPY entrypoint.sh /app/docker/php/entrypoint.sh
+RUN chmod +x /app/docker/php/entrypoint.sh
+
 WORKDIR /app
 CMD ["bash"]
