--- a/Docker/plusFlix/docker-compose.yml
+++ b/Docker/plusFlix/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     volumes:
       - ./backend:/app
       - ./docker/php:/app/docker/php #okropny volume ale cóż
-      - ../../sqlite:/app/sqlite_source:ro   
+      - ../../SQLite:/app/sqlite_source:ro   
     ports:
       - "8080:8000"
     entrypoint: ["/app/docker/php/entrypoint.sh"]
