--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,10 @@
 *.sh text eol=lf
+*.sh text eol=lf
+*.php text eol=lf
+*.js text eol=lf
+*.ts text eol=lf
+*.yml text eol=lf
+*.yaml text eol=lf
+*.json text eol=lf
+*.md text eol=lf
+* text=auto
