--- a/Docker/plusFlix/docker-compose.yml
+++ b/Docker/plusFlix/docker-compose.yml
@@ -5,9 +5,8 @@ services:
     working_dir: /app
     volumes:
       - ./backend:/app
-      - ./docker/php:/app/docker/php #okropny volume ale cóż
       - ../../SQLite:/app/sqlite_source:ro   
     ports:
       - "8080:8000"
-    entrypoint: ["/app/docker/php/entrypoint.sh"]
+    entrypoint: ["entrypoint.sh"]
 
