--- a/Docker/plusFlix/backend/composer.json
+++ b/Docker/plusFlix/backend/composer.json
@@ -15,9 +15,10 @@
         "symfony/flex": "^2.10",
         "symfony/framework-bundle": "8.0.*",
         "symfony/runtime": "8.0.*",
+        "symfony/security-bundle": "^8.0",
+        "symfony/twig-bundle": "^8.0",
         "symfony/yaml": "8.0.*",
-        "twig/twig": "^3.22.1",
-        "symfony/twig-bundle": "^8.0"
+        "twig/twig": "^3.22.1"
     },
     "config": {
         "allow-plugins": {
