Quality of Life stuff

--- a/Docker/plusFlix/backend/.env
+++ b/Docker/plusFlix/backend/.env
@@ -24,7 +24,7 @@ APP_SHARE_DIR=var/share
 # Configure how to generate URLs in non-HTTP contexts, such as CLI commands.
 # See https://symfony.com/doc/current/routing.html#generating-urls-in-commands
 DEFAULT_URI=http://localhost
-DATABASE_URL="sqlite:///%kernel.project_dir%/var/plusflix.db"
+DATABASE_URL="sqlite:///%kernel.project_dir%/var/database.db"
 ###< symfony/routing ###
 
 ###> doctrine/doctrine-bundle ###
