--- a/Docker/plusFlix/docker-compose.yml
+++ b/Docker/plusFlix/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - ./backend/templates:/app/templates:cached
       - ./backend/public:/app/public:cached
       - ./backend/.env:/app/.env
-      - ../../SQLite:/app/sqlite_source:ro
+     # - ../../SQLite:/app/sqlite_source:ro ig już niepotrzebne?
       - ./backend/var:/app/var
       - ./backend/migrations:/app/migrations
     ports:
