--- a/Docker/plusFlix/backend/composer.json
+++ b/Docker/plusFlix/backend/composer.json
@@ -76,6 +76,9 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.65.1"
+        "symfony/debug-bundle": "8.0.*",
+        "symfony/maker-bundle": "^1.65.1",
+        "symfony/stopwatch": "8.0.*",
+        "symfony/web-profiler-bundle": "8.0.*"
     }
 }
