--- a/Docker/plusFlix/backend/config/packages/security.yaml
+++ b/Docker/plusFlix/backend/config/packages/security.yaml
@@ -5,7 +5,11 @@ security:
 
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            entity:
+                class: App\Entity\Admin
+                property: username
 
     firewalls:
         dev:
@@ -14,7 +18,15 @@ security:
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            provider: app_user_provider
+
+            form_login:
+                login_path: admin_login
+                check_path: admin_login
+                default_target_path: admin_main
+
+            logout:
+                path: admin_logout  # ❌ nie "admin_logout", tylko URL
 
             # Activate different ways to authenticate:
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -24,7 +36,9 @@ security:
 
     # Note: Only the *first* matching rule is applied
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/admin/login$, roles: PUBLIC_ACCESS }
+         - { path: ^/admin, roles: ROLE_ADMIN }
+
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
