--- a/Docker/plusFlix/docker-compose.yml
+++ b/Docker/plusFlix/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     container_name: plusflix_app
     working_dir: /app
     volumes:
+      - ./backend/config:/app/config
       - ./backend/src:/app/src:cached
       - ./backend/templates:/app/templates:cached
       - ./backend/public:/app/public:cached
