--- a/Docker/plusFlix/backend/config/packages/security.yaml
+++ b/Docker/plusFlix/backend/config/packages/security.yaml
@@ -26,7 +26,7 @@ security:
                 default_target_path: admin_main
 
             logout:
-                path: admin_logout  # ❌ nie "admin_logout", tylko URL
+                path: admin_logout
 
             # Activate different ways to authenticate:
             # https://symfony.com/doc/current/security.html#the-firewall
